[package]
name = "os"
version = "0.1.0"
authors = ["ldl <746620536@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs"}
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs"}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.3.9"
spin = "0.5.2"
bitflags = "1.2.1"
bit_field = "0.10.0"
xmas-elf = "0.7.0"